--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "spatie/laravel-directory-cleanup": "^1.4",
+        "spatie/laravel-medialibrary": "^7.18"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
